<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv1_txt"
        android:textColor="#0A0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <!-- Row 0 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/weight_kg"
                android:textColor="#F00"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_weight"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <!-- Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/height_cm"
                android:textColor="#F00"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <!-- Row 2 -->
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/custombuttongenoa"
            android:onClick="onClick"
            android:text="@string/calculate"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/custombuttongenoa"
            android:onClick="onClick"
            android:text="@string/clear"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>